# template_macro_derive

./: Cargo.toml  README.md  bacon.toml
src/: lib.rs  macro_impl.rs
tests/: 01_expand.rs  collection.rs
