[package]
name = "{{ crate_name }}"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[[test]]
name = "integration"
path = "tests/collection.rs"

[[test]]
name = "expand"
path = "tests/01_expand.rs"

[dependencies]
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = "1"
syn = {version = "2", features = ["full", "extra-traits", "parsing"]}

[dev-dependencies]
trybuild = { version = "1.0.101", features = ["diff"] }
